# Digital-Workshop

./: .gitignore  .gitlab-ci-simple.yml  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  10.0.0  3D-MM-DEVELOPMENT-SCRIPT.md  =2.14  =3.2.0  AI_ANALYSIS_BUTTON_FIXED.md  API_KEY_DETECTION_FIXED.md  API_KEY_SANITIZATION_COMPLETE.md  ASYNC_MODEL_LOADING_IMPLEMENTATION.md  AutoGenDesc-AI-Integration-Complete.md  AutoGenDesc-AI-Integration-Plan.md  BOARD_VISUALIZER_IMPROVEMENTS.md  BUILD_FIXES_SUMMARY.md  BUILD_SYSTEM_README.md  CLEANUP_ANALYSIS.md  CLEANUP_EXECUTION_GUIDE.md  CLEANUP_PROCESS_DOCUMENTATION.md  COLOR= MATERIAL=    COMMIT_SUMMARY.md  CONSISTENCY_CHECKLIST.md  CONSISTENCY_CHECK_COMPLETE.md  DEPRECATED_DOCUMENTS_ANALYSIS.md  DEPRECATED_DOCUMENTS_SUMMARY.txt  DEPRECATION_CLEANUP_COMPLETE.md  DOCS_CLEANUP_SUMMARY.md  DOCUMENTATION_CLEANUP_REPORT.txt  DOCUMENTATION_CONSOLIDATION_REPORT.md  ENVIRONMENT_VARIABLE_SETUP.md  FEEDS_AND_SPEEDS_IMPROVEMENTS_SUMMARY.md  FEEDS_AND_SPEEDS_INTEGRATION_FIX.md  FINAL_CONSISTENCY_REPORT.md  GEMINI_FIX_COMPLETE.md  GEMINI_INTEGRATION_SUMMARY.md  GEMINI_NOT_SUPPORTED_FIX.md  GEMINI_PREFERENCES_FIX.md  GH_BUILD_TRIGGERED.md  (+167 more)
.github/: AUTOMATED_BUILDS.md
.kilocode/: mcp.json
0.1.2/: ANALYSIS_COMPLETE.md  ANALYSIS_RESULTS.txt  BRANCH_INFO.md  CODE_QUALITY_REPORT.md  CODE_QUALITY_SUMMARY.txt  DELIVERABLES.md  EXECUTION_SUMMARY.md  FINAL_SUMMARY.txt  QUICK_FIXES.py  README.md  README_CODE_QUALITY.md  REFACTORING_GUIDE.md  ROOT_CLEANUP_PLAN.md  START_HERE.md  TASK_LIST_SUMMARY.md
AutoGenDESC-AI/: CHANGES_SUMMARY.md  CUSTOM_ENDPOINT_GUIDE.md  OPENROUTER_ADDED.md  OPENROUTER_INTEGRATION_COMPLETE.md  OPENROUTER_SETUP.md  PROVIDER_VERIFICATION_REPORT.md  QUICK_REFERENCE.md  README.md  VERIFICATION_COMPLETE.md  config.example.json  config.json  main.py  requirements.txt
Issues/: Rendering backgrounds.md
Kilo/: 3d-viewer.html.md  DeadCode.md  DeadCodeFresh.md  cut-list.html.md  digital-workshop-manual.html  feeds-speeds.html.md  gcode-previewer.html.md  getting-started.html.md  index.html.md  interface-guide.html.md  materials.html.md  model-management.html.md
Wish/: 020-gcode-tools-cleanup.md  030-feeds-and-speeds-overhaul.md  130-data-reset-and-migration.md  README.md
build_system/: README.md  build.bat  build.py  build_exe.py  installer.nsi  make_installers.ps1
config/: installer.iss  installer.nsi  quality_config.yaml  security.yaml  test_framework_config.json
data/: 3dmm.db-shm  3dmm.db-wal
docs/: 00_FILE_ORGANISATION_START_HERE.md  00_START_HERE.md  AI_ANALYSIS_IMPLEMENTATION.md  API_REFERENCE_FILE_ORGANISATION.md  ATEXIT_HANDLERS_REMOVAL.md  BUGFIX_BOARD_VISUALIZER.md  BUILD_ARCHITECTURE.md  BUILD_ISSUES_ANALYSIS.md  BUILD_TESTING_GUIDE.md  CI_CD_INTEGRATION_GUIDE.md  CLEANUP_SEQUENCE_TESTING.md  CLEANUP_SUMMARY.md  CLEANUP_VERIFICATION_STATISTICS.md  CLO_COMPREHENSIVE_IMPLEMENTATION_PLAN.md  COMPLETE_API_KEY_FIX_SUMMARY.md  COMPLETION_CHECKLIST.md  DEVELOPER_GUIDE.md  DEVELOPER_GUIDE_FILE_ORGANISATION.md  DOCUMENTATION_INDEX.md  DWW_COMPLETE_SYSTEM.md  DWW_ENHANCEMENT_SUMMARY.md  DWW_FORMAT_SPECIFICATION.md  DWW_IMPLEMENTATION_SUMMARY.md  DWW_IMPORT_GUIDE.md  DWW_IMPORT_IMPLEMENTATION.md  DWW_USER_GUIDE.md  ENVIRONMENT_VARIABLE_SETUP.md  FEATURES_GUIDE.md  FILE_ORGANISATION_CLARIFICATION_COMPLETE.md  (+81 more)
(+1152 files in other folders)
